--- a/web.yaml
+++ b/web.yaml
@@ -20,4 +20,24 @@ spec:
       containers:
       - image: nginx
         name: nginx
-        resources: {}
+        resources:
+          limits:
+            cpu: "1"
+            memory: "200Mi"
+          requests:
+            cpu: "0.5"
+            memory: "100Mi"
+        livenessProbe:
+          exec:
+            command:
+            - cat
+            - /tmp/healthy
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          exec:
+            command:
+            - echo
+            - /tmp/healthy
+          initialDelaySeconds: 5
+          periodSeconds: 5
