--- a/web.yaml
+++ b/web.yaml
@@ -17,6 +17,9 @@ spec:
       labels:
         app: web
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
       containers:
       - image: nginx
         name: nginx
