--- a/app.yaml
+++ b/app.yaml
@@ -7,6 +7,11 @@ metadata:
   name: web
 spec:
   replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
   selector:
     matchLabels:
       app: web
