--- a/web.yaml
+++ b/web.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
     type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: '%25'
+      maxSurge: '%25'
   selector:
     matchLabels:
       app: web
