--- a/app.yaml
+++ b/app.yaml
@@ -21,6 +21,7 @@ spec:
       labels:
         app: web
     spec:
+      dnsPolicy: ClusterFirst
       securityContext:
         runAsUser: 1000
         runAsGroup: 3000
