--- a/app.yaml
+++ b/app.yaml
@@ -9,8 +9,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: '%25'
-      maxSurge: '%25'
+      maxUnavailable: '25%'
+      maxSurge: '25%'
   selector:
     matchLabels:
       app: web
