--- a/app.yaml
+++ b/app.yaml
@@ -25,6 +25,8 @@ spec:
       - image: redis
         name: redis
         imagePullPolicy: Always
+      securityContext:  
+        runAsNonRoot: true
         resources:
           limits:
             cpu: "1"
