--- a/web.yaml
+++ b/web.yaml
@@ -27,6 +27,10 @@ spec:
       - image: nginx:1.16
         name: nginx
         imagePullPolicy: Always
+        args:
+        - /bin/sh
+        - -c
+        - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
         resources:
           limits:
             cpu: "1"
