--- a/app.yaml
+++ b/app.yaml
@@ -35,16 +35,16 @@ spec:
             cpu: "0.5"
             memory: "100Mi"
         readinessProbe:
-          httpGet:
-            path: /health/ready
-            port: 80
-            scheme: HTTP
+          exec:
+            command:
+            - ls
+            - /opt
           initialDelaySeconds: 10
           periodSeconds: 15
         livenessProbe:
-          httpGet:
-            path: /health/live
-            port: 80
-            scheme: HTTP
+          exec:
+            command:
+            - ls
+            - /opt
           initialDelaySeconds: 2
           periodSeconds: 5
