--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,7 @@ spec:
     rollingUpdate:
       maxUnavailable: '25%'
       maxSurge: '25%'
+      timeoutSeconds: 100
   selector:
     matchLabels:
       app: app
